--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: SCeQTL
 Type: Package
 Title: single cell expression QTL mapping tool
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: person("Yue", "HU", email = "huyue14@mails.tsinghua.edu.cn", role = c("aut", "cre"))
-Description: More about what it does (maybe more than one line)
-License: GPL-2
+Description: SCeQTL is an R package that use zero-inflated negative bionomial
+            regression to do eQTL analysis on single-cell data.
+License: GPL (>= 2)
 LazyData: TRUE
 Imports: qvalue, ggplot2, doParallel, pscl, foreach
-Depends: qvalue, ggplot2, doParallel, pscl, foreach, parallel,
-        iterators
 Author: Yue HU [aut, cre]
-Maintainer: Yue HU <huyue14@mails.tsinghua.edu.cn>
+Maintainer: Xuegong Zhang <zhangxg@tsinghua.edu.cn>
 NeedsCompilation: no
-Packaged: 2017-04-17 06:45:21 UTC; yhu
+Packaged: 2019-01-30 17:28:05 UTC; yhu
+BugReports: https://github.com/XuegongLab/SCeQTL/issues
+RoxygenNote: 6.1.1
+Depends: R (>= 2.10)
